Alignment fix for sonar widget.

--- a/Hygieia_UI/UI/src/app/css/dashboardCSS.less
+++ b/Hygieia_UI/UI/src/app/css/dashboardCSS.less
@@ -626,7 +626,7 @@ input.middle:focus {
 }
 
 .dash-row, .dash-row .fa, tr.dash-row>td{
-    line-height:2.6rem !important;
+    line-height:3.1rem !important;
 }
 
 .style_prevu_kit
